--- a/static/styles.css
+++ b/static/styles.css
@@ -43,7 +43,7 @@ body {
 .header {
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto !important;
+    margin: 2 auto !important;
     background-color: #f4f4f4;
     overflow: hidden;
     position: relative;
@@ -174,10 +174,9 @@ body {
 }
 
 .menu button .button-content {
-    display: inline-flex;
-    align-items: center;
-    text-align: left;
-    flex-grow: 1;
+    display: flex;
+    align-items: center; /* Vertically centers the SVG and text */
+    justify-content: flex-start; /* Aligns content to the left */
 }
 
 .menu button .caret {
