feat: Add data retrieval endpoints and refactor template includes for partner, community, and merchant pages

--- a/templates/community.html
+++ b/templates/community.html
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 {% with user_type='community' %}
-                    {% include 'my_account.html' %}
+                    {% include 'my_account.inc' %}
                 {% endwith %}
                 <div id="categories" class="section">
                     <h2>My Categories</h2>
@@ -278,7 +278,7 @@
                     </div>
                     <p>Request a custom Wix website for your community from our Wix Professionals. Fill out the form below to specify your needs:</p>
                     {% with user_type='community' %}
-                        {% include 'siterequest.html' %}
+                        {% include 'siterequest.inc' %}
                     {% endwith %}
                 </div>
             </div>
