--- a/templates/merchant.html
+++ b/templates/merchant.html
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 {% with user_type='merchant' %}
-                    {% include 'my_account.html' %}
+                    {% include 'my_account.inc' %}
                 {% endwith %}
                 <div id="my-products" class="section">
                     <h2>My Products</h2>
@@ -107,7 +107,7 @@
                     </div>
                     <p>Request a custom Wix store to sell your products online. Provide details below to set up your store (minimum: Home and Returns Policy pages).</p>
                     {% with user_type='merchant' %}
-                        {% include 'siterequest.html' %}
+                        {% include 'siterequest.inc' %}
                     {% endwith %}
                 </div>
             </div>
