--- a/templates/partner.html
+++ b/templates/partner.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 {% with user_type='partner' %}
-                    {% include 'my_account.html' %}
+                    {% include 'my_account.inc' %}
                 {% endwith %}
                 <div id="my-products" class="section">
                     <h2>My Products</h2>
