feat: Implement change password functionality and refactor related templates for admin and partner users

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -426,27 +426,11 @@
                     </div>
                 </div>
 
-                <div id="changePassword" class="section">
-                    <h2>Change Password</h2>
-                    <div class="settings-form">
-                        <div class="password-container">
-                            <label for="currentPassword">Current Password:</label>
-                            <input type="password" id="currentPassword" name="currentPassword" placeholder="Enter current password">
-                            <i class="fas fa-eye password-toggle" data-target="currentPassword"></i>
-                        </div>
-                        <div class="password-container">
-                            <label for="newPassword">New Password:</label>
-                            <input type="password" id="newPassword" name="newPassword" placeholder="Enter new password">
-                            <i class="fas fa-eye password-toggle" data-target="newPassword"></i>
-                        </div>
-                        <div class="password-container">
-                            <label for="confirmPassword">Confirm New Password:</label>
-                            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm new password">
-                            <i class="fas fa-eye password-toggle" data-target="confirmPassword"></i>
-                        </div>
-                        <button data-action="savePassword"><i class="fas fa-key"></i> Change Password</button>
+                {% with user_type='admin' %}
+                    <div id="change-password" class="section" style="display: none;">
+                        {% include 'change_password.inc' %}
                     </div>
-                </div>
+                {% endwith %}
             </div>
         </div>
     </div>
