--- a/static/icons.css
+++ b/static/icons.css
@@ -75,3 +75,48 @@
     height: 20px;
     vertical-align: middle;
 }
+
+/* icons.css */
+/* Purpose: Defines inline SVG icons for use in community.html "My Website" section */
+/* icons.css */
+/* Purpose: Defines inline SVG icons for use in community.html "My Website" section */
+
+/* Wix Icon */
+.icon-wix::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="white" d="M393.4 131.7c0 13 2.1 32.7-28.7 43.8-9.5 3.5-16 9.7-16 9.7 0-31 4.7-42.2 17.4-48.9 9.8-5.1 27.2-4.6 27.2-4.6zm-115.8 35.5l-34.2 132.7-28.5-108.6c-7.7-32-20.8-48.5-48.4-48.5-27.4 0-40.7 16.2-48.4 48.5L89.5 299.9 55.3 167.2C49.7 140.5 23.9 129 0 132l65.6 247.9s21.6 1.6 32.5-4c14.2-7.3 21-12.8 29.6-46.6 7.7-30.1 29.1-118.4 31.1-124.7 4.8-14.9 11.1-13.8 15.4 0 2 6.3 23.5 94.6 31.1 124.7 8.6 33.7 15.4 39.3 29.6 46.6 10.8 5.5 32.5 4 32.5 4l65.6-247.9c-24.4-3.1-49.8 8.9-55.3 35.3zm115.8 5.2s-4.1 6.3-13.5 11.6c-6 3.4-11.8 5.6-18 8.6-15.1 7.3-13.2 14-13.2 35.2v152.1s16.6 2.1 27.4-3.4c13.9-7.1 17.1-14 17.3-44.8V181.4l0 0v-9zm163.4 84.1L640 132.8s-35.1-6-52.5 9.9c-13.3 12.1-24.4 29.6-54.2 72.5-.5 .7-6.3 10.5-13.1 0-29.3-42.2-40.8-60.3-54.2-72.5-17.4-15.8-52.5-9.9-52.5-9.9l83.2 123.7-83 123.4s36.6 4.6 54-11.2c11.5-10.5 17.6-20.4 52.5-70.7 6.8-10.5 12.6-.8 13.1 0 29.4 42.4 39.2 58.1 53.1 70.7 17.4 15.8 53.3 11.2 53.3 11.2L556.8 256.5z"/></svg>');
+    display: inline-block;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+/* WordPress Icon */
+.icon-wordpress::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="white" d="M61.7 169.6l-49.7 185.5c42.3 76.8 119.2 129.9 208.8 129.9 26.5 0 52.1-5 76-14.1L314 448l30.8-102.8 22-74.4-59-165.5c-24.7-5-50.8-7.6-77.8-7.6-42.8 0-82.8 11.7-116.3 32zm428.9 36.4C476 127.5 413.9 70.5 336 61.7L246.5 288l70.2 66.1zm-88.1-98.9c16.8 2.3 33 7.6 48 15.8 11.4 6.3 21.8 14.5 30.8 24.2 6.5 7 12 14.8 16.4 23.2 15.2 29.7 23.2 61.9 23.2 94.8 0 46-18.8 87.8-50 117-2.8-66-27-126-67.8-171.8zm-149.3 47.5c25.5 0 46 19 46 42.5s-20.5 42.5-46 42.5-46-19-46-42.5 20.5-42.5 46-42.5zm149.2 187.9l-33.8-100-42.5-112.9c-16.8-2-33.8-2.8-51-2.8-52.2 0-100.5 16.5-139.5 44.5l52.2 154.9c42-27.2 92.2-42.8 141.5-42.8 24.2 0 47.8 3.8 73.2 11.2zm-196-94.9c-25.5 0-46-19-46-42.5s20.5-42.5 46-42.5 46 19 46 42.5-20.5 42.5-46 42.5zm-90.5-42.5c0-23.5 20.5-42.5 46-42.5s46 19 46 42.5-20.5 42.5-46 42.5-46-19-46-42.5zm-61.8-85.8C36.2 165 0 223 0 288c0 141.4 114.6 256 256 256 90.8 0 171-47.5 216.5-119.5-45-15-93-23.5-142.5-23.5-66.5 0-129.2 21-181.2 59.8L112 344.5l13.8-51.5L209 64C148.2 64 94 99.8 61.7 149.8z"/></svg>');
+    display: inline-block;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+/* Squarespace Icon */
+.icon-squarespace::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="white" d="M186.5 235.8c-24.7-24.7-64.8-24.7-89.5 0L73.2 259.5c-24.7 24.7-24.7 64.8 0 89.5l23.8 23.8c24.7 24.7 64.8 24.7 89.5 0l23.8-23.8c24.7-24.7 24.7-64.8 0-89.5l-23.8-23.7zm66.1-66.1c24.7 24.7 64.8 24.7 89.5 0l23.8-23.8c24.7-24.7 24.7-64.8 0-89.5l-23.8-23.8c-24.7-24.7-64.8-24.7-89.5 0L188.8 56.5c-24.7 24.7-24.7 64.8 0 89.5l23.8 23.7zm66.1 66.1c-24.7-24.7-64.8-24.7-89.5 0l-23.8 23.8c-24.7 24.7-24.7 64.8 0 89.5l23.8 23.8c24.7 24.7 64.8 24.7 89.5 0l23.8-23.8c24.7-24.7 24.7-64.8 0-89.5l-23.8-23.8zm66.1 66.1c24.7 24.7 64.8 24.7 89.5 0l23.8-23.8c24.7-24.7 24.7-64.8 0-89.5l-23.8-23.8c-24.7-24.7-64.8-24.7-89.5 0l-23.8 23.8c-24.7 24.7-24.7 64.8 0 89.5l23.8 23.8z"/></svg>');
+    display: inline-block;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+/* Weebly Icon */
+.icon-weebly::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="white" d="M435.8 123.5c-8.6-12.2-21.8-19.8-37-21.8-17.8-2.3-35.8 2.3-50 13-14.2-10.8-32.2-15.4-50-13-15.2 2-28.4 9.6-37 21.8-8.8 12.5-11 28-6 42.2 8 22.8 28.4 38 55 40 2 .2 4 .2 6 0 26.6-2 47-17.2 55-40 5-14.2 2.8-29.8-6-42.2zM256 235.8c-26.6-2-47-17.2-55-40-5-14.2-2.8-29.8 6-42.2 8.6-12.2 21.8-19.8 37-21.8 17.8-2.3 35.8 2.3 50 13 14.2-10.8 32.2-15.4 50-13 15.2 2 28.4 9.6 37 21.8 8.8 12.5 11 28 6 42.2-8 22.8-28.4 38-55 40-2 .2-4 .2-6 0-26.6-2-47-17.2-55-40zm-163.8 0c-26.6-2-47-17.2-55-40-5-14.2-2.8-29.8 6-42.2 8.6-12.2 21.8-19.8 37-21.8 17.8-2.3 35.8 2.3 50 13 14.2-10.8 32.2-15.4 50-13 15.2 2 28.4 9.6 37 21.8 8.8 12.5 11 28 6 42.2-8 22.8-28.4 38-55 40-2 .2-4 .2-6 0-26.6-2-47-17.2-55-40zm-12 97l47 179h40l-47-179H80zm163.8 0l47 179h40l-47-179h-40zm163.8 0l47 179h40l-47-179h-40z"/></svg>');
+    display: inline-block;
+    object-fit: contain;
+    vertical-align: middle;
+}
+
+/* Joomla Icon */
+.icon-joomla::before {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="white" d="M243.3 154.8c-10.5-10.5-27.6-10.5-38.1 0l-19 19-95.2-95.2c28-34.2 67-57 110.9-65.5C141.2 56.9 98.8 112.8 98.8 176c0 19.7 4.9 38.3 13.5 54.6l-90 90c-15.5-27-24.3-58.5-24.3-92 0-106 86-192 192-192 33.5 0 65 8.6 92 23.7l-30.7 30.7zm-41.4 83.5c10.5 10.5 27.6 10.5 38.1 0l19-19 95.2 95.2c-28 34.2-67 57-110.9 65.5 60.8-43.8 103.2-99.7 103.2-163 0-19.7-4.9-38.3-13.5-54.6l90-90c15.5 27 24.3 58.5 24.3 92 0 106-86 192-192 192-33.5 0-65-8.6-92-23.7l30.7-30.7zm-19-133.6l-30.7-30.7C125 58.9 93.5 50.3 60 50.3c-33.5 0-65 8.6-92 23.7l90 90c-8.6-16.3-13.5-34.9-13.5-54.6 0-63.2 42.4-119.1 103.2-163-43.9 8.5-82.9 31.3-110.9 65.5l95.2 95.2 19-19c10.5-10.5 10.5-27.6 0-38.1zm133.6 209.1l30.7 30.7c27-15.1 58.5-23.7 92-23.7 106 0 192-86 192-192 0-33.5-8.6-65-23.7-92l-90 90c8.6 16.3 13.5 34.9 13.5 54.6 0 63.2-42.4 119.1-103.2 163 43.9-8.5 82.9-31.3 110.9-65.5l-95.2-95.2-19 19c-10.5 10.5-10.5 27.6 0 38.1z"/></svg>');
+    display: inline-block;
+    object-fit: contain;
+    vertical-align: middle;
+}
