--- a/templates/community.html
+++ b/templates/community.html
@@ -31,22 +31,22 @@
                     </button>
                     <div id="my_website_intro" class="submenu">
                         <button data-section="wix">
-                            <span class="button-content"><span class="icon-wix" style="width: 24px; height: 24px;"></span> Wix</span>
+                            <span class="button-content"><span class="icon-wix menu-size"></span> Wix</span>
                         </button>
                         <button data-section="wordpress">
-                            <span class="button-content"><span class="icon-wordpress" style="width: 24px; height: 24px;"></span> WordPress</span>
+                            <span class="button-content"><span class="icon-wordpress menu-size"></span> WordPress</span>
                         </button>
                         <button data-section="squarespace">
-                            <span class="button-content"><span class="icon-squarespace" style="width: 24px; height: 24px;"></span> Squarespace</span>
+                            <span class="button-content"><span class="icon-squarespace menu-size"></span> Squarespace</span>
                         </button>
                         <button data-section="weebly">
-                            <span class="button-content"><span class="icon-weebly" style="width: 24px; height: 24px;"></span> Weebly</span>
+                            <span class="button-content"><span class="icon-weebly menu-size"></span> Weebly</span>
                         </button>
                         <button data-section="joomla">
-                            <span class="button-content"><span class="icon-joomla" style="width: 24px; height: 24px;"></span> Joomla</span>
+                            <span class="button-content"><span class="icon-joomla menu-size"></span> Joomla</span>
                         </button>
                         <button data-section="no_website">
-                            <span class="button-content"><i class="fas fa-question-circle"></i> I Don’t Have a Website Yet</span>
+                            <span class="button-content"><i class="fas fa-question-circle menu-size"></i> I Don’t Have a Website Yet</span>
                         </button>
                     </div>
                     <button data-section="categories">
@@ -54,11 +54,7 @@
                     </button>
                     <button data-submenu="referrals_intro" data-section="referrals_intro">
                         <span class="button-content">
-                            <span class="svg-icon">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" preserveAspectRatio="xMidYMid meet">
-                                    <path d="M72 88a56 56 0 1 1 112 0A56 56 0 1 1 72 88zM64 245.7C54 256.9 48 271.8 48 288s6 31.1 16 42.3l0-84.7zm144.4-49.3C178.7 222.7 160 261.2 160 304c0 34.3 12 65.8 32 90.5l0 21.5c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32l0-26.8C26.2 371.2 0 332.7 0 288c0-61.9 50.1-112 112-112l32 0c24 0 46.2 7.5 64.4 20.3zM448 416l0-21.5c20-24.7 32-56.2 32-90.5c0-42.8-18.7-81.3-48.4-107.7C449.8 183.5 472 176 496 176l32 0c61.9 0 112 50.1 112 112c0 44.7-26.2 83.2-64 101.2l0 26.8c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32zm8-328a56 56 0 1 1 112 0A56 56 0 1 1 456 88zM576 245.7l0 84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM320 32a64 64 0 1 1 0 128 64 64 0 1 1 0-128zM240 304c0 16.2 6 31 16 42.3l0-84.7c-10 11.3-16 26.1-16 42.3zm144-42.3l0 84.7c10-11.3 16-26.1 16-42.3s-6-31.1-16-42.3zM448 304c0 44.7-26.2 83.2-64 101.2l0 42.8c0 17.7-14.3 32-32 32l-64 0c-17.7 0-32-14.3-32-32l0-42.8c-37.8-18-64-56.5-64-101.2c0-61.9 50.1-112 112-112l32 0c61.9 0 112 50.1 112 112z"/>
-                                </svg>
-                            </span> My Referrals
+                            <span class="icon-community menu-size"></span> My Referrals
                         </span>
                         <i class="fas fa-caret-right caret"></i>
                     </button>
@@ -75,13 +71,16 @@
                         <i class="fas fa-caret-right caret"></i>
                     </button>
                     <div id="my-account-submenu" class="submenu">
-                        <button data-section="my-account">
+                        <button data-section="contact-details">
                             <span class="button-content"><i class="fas fa-address-book"></i> Contact</span>
                         </button>
                         <button data-section="change-password">
                             <span class="button-content"><i class="fas fa-key"></i> Change Password</span>
                         </button>
                     </div>
+                    <button data-href="/admin" style="background-color: #dc3545;">
+                        <span class="button-content"><i class="fas fa-arrow-left"></i> Back to Admin</span>
+                    </button>
                     <button id="logOffBtn" style="background-color: #dc3545;">
                         <span class="button-content"><i class="fas fa-sign-out-alt"></i> Log Off</span>
                     </button>
@@ -90,7 +89,7 @@
             <div class="content-wrapper">
                 <div id="welcome" class="section">
                     <h2>Welcome to Your Community Dashboard</h2>
-                    <p>Welcome! This dashboard is your hub for managing your community account and tracking referrals.</p>
+                    <p id="welcome-message">Hello, <span id="user-contact-name">[User]</span>! This dashboard is your hub for managing your community account and tracking referrals.</p>
                     <p>As a valued member, connect with other community groups to share resources and grow together.</p>
                     <p>Use the menu on the left to:</p>
                     <ul>
@@ -184,7 +183,7 @@
                 </div>
                 <div id="wix" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <span class="icon-wix" style="width: 32px; height: 32px; margin-right: 10px;"></span>
+                        <span class="icon-wix section-icon"></span>
                         <h2>Wix Integration</h2>
                     </div>
                     <p>Add discounts to your Wix site:</p>
@@ -197,7 +196,7 @@
                 </div>
                 <div id="wordpress" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <span class="icon-wordpress" style="width: 32px; height: 32px; margin-right: 10px;"></span>
+                        <span class="icon-wordpress section-icon"></span>
                         <h2>WordPress Integration</h2>
                     </div>
                     <p>Add discounts to WordPress:</p>
@@ -210,7 +209,7 @@
                 </div>
                 <div id="squarespace" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <span class="icon-squarespace" style="width: 32px; height: 32px; margin-right: 10px;"></span>
+                        <span class="icon-squarespace section-icon"></span>
                         <h2>Squarespace Integration</h2>
                     </div>
                     <p>Integrate discounts into Squarespace:</p>
@@ -223,7 +222,7 @@
                 </div>
                 <div id="weebly" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <span class="icon-weebly" style="width: 32px; height: 32px; margin-right: 10px;"></span>
+                        <span class="icon-weebly section-icon"></span>
                         <h2>Weebly Integration</h2>
                     </div>
                     <p>Add discounts to Weebly:</p>
@@ -236,7 +235,7 @@
                 </div>
                 <div id="joomla" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <span class="icon-joomla" style="width: 32px; height: 32px; margin-right: 10px;"></span>
+                        <span class="icon-joomla section-icon"></span>
                         <h2>Joomla Integration</h2>
                     </div>
                     <p>Integrate discounts into Joomla:</p>
@@ -249,7 +248,7 @@
                 </div>
                 <div id="no_website" class="section" style="padding-left: 200px;">
                     <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                        <i class="fas fa-question-circle" style="font-size: 32px; margin-right: 10px;"></i>
+                        <i class="fas fa-question-circle section-icon"></i>
                         <h2>I Don’t Have a Website Yet</h2>
                     </div>
                     <p>Request a custom Wix website for your community from our Wix Professionals. Fill out the form below to specify your needs:</p>
