--- a/templates/merchant.html
+++ b/templates/merchant.html
@@ -38,14 +38,14 @@
                         <i class="fas fa-caret-right caret"></i>
                     </button>
                     <div id="my-account-submenu" class="submenu">
-                        <button data-section="my-account">
+                        <button data-section="contact-details">
                             <span class="button-content"><i class="fas fa-address-book"></i> Contact</span>
                         </button>
                         <button data-section="change-password">
                             <span class="button-content"><i class="fas fa-key"></i> Change Password</span>
                         </button>
                     </div>
-                    <button data-href="/admin">
+                    <button data-href="/admin" style="background-color: #dc3545;">
                         <span class="button-content"><i class="fas fa-arrow-left"></i> Back to Admin</span>
                     </button>
                     <button id="logOffBtn" style="background-color: #dc3545;">
@@ -54,13 +54,10 @@
                 </div>
             </div>
             <div class="content-wrapper" style="margin-top: 0;">
-                <div id="welcome" class="section">
-                    <h2>Welcome to Your Merchant Dashboard</h2>
-                    <p>This dashboard allows you to link the parts on your Wix site to a network of community groups, who show relevant discounted products on their websites from clubmadeira.io.</p>
-                </div>
                 <div id="info" class="section">
                     <h2>Merchant Info</h2>
-                    <p>Welcome to your merchant dashboard overview. Use the menu to manage products, your store, Wix integration, and account settings.</p>
+                    <p id="welcome-message">Hello, <span id="user-contact-name">[User]</span>! This dashboard is designed for merchants to manage integrations with clubmadeira.io.</p>
+                    <p>Use the menu to manage products, your store, Wix integration, and account settings.</p>
                 </div>
                 <div id="my-account" class="section">
                     <h2>My Account</h2>
